--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <label for="Author">Author</label>
         <input type="text" class="form-control" id="author" placeholder="Flatiron School">
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+      <button type="submit" class="btn btn-primary">Submit Quote</button>
     </form>
   </div>
   <script src="src/index.js"></script>
